# gst-alphamask

./: .gitignore  NEWS  README.md  autogen.sh  configure.ac
src/: Makefile.am  gstalphamask.c  gstalphamask.h
