plugin_LTLIBRARIES = libgstalphamask.la

libgstalphamask_la_SOURCES = gstalphamask.c

libgstalphamask_la_CFLAGS = $(GST_CFLAGS)

libgstalphamask_la_LIBADD = $(GST_LIBS)
libgstalphamask_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstalphamask_la_LIBTOOLFLAGS = --tag=disable-static

noinst_HEADERS = gstalphamask.h

